added tests to both factories